plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'

	/* DB */
	// runtimeOnly 'com.mysql:mysql-connector-j'
	// runtimeOnly 'com.h2database:h2'

	/* MongoDB (Reactive) */
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.9.2'
	// implementation 'org.mongodb:mongodb-driver-sync:4.10.2'

	/* GSON */
	implementation 'com.google.code.gson:gson:2.10.1'

	/* Test */
	// testImplementation 'org.junit.jupiter:junit-jupiter'
	// testImplementation 'org.assertj:assertj-core'

	/* Security */
	// implementation 'org.springframework.boot:spring-boot-starter-security'
	// implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	// implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
}

tasks.named('test') {
	useJUnitPlatform()
}

// ext.profile = (!project.hasProperty('profile') || !profile) ? 'dev' : profile

bootRun {
    String activeProfile = System.properties['spring.profiles.active']
    systemProperty "spring.profiles.active", activeProfile
}